crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__single_use__computed_tail.snap
---
source: crates/nash-codegen/src/optimizer_tests/single_use.rs
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
let result#1 : int = addInteger 40 2 in
result#1
--- unoptimized UPLC
(program 1.1.0
  [(lam result_1 result_1)
    [[(builtin addInteger) (con integer 40)] (con integer 2)]])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- isolated pass
--- core before
let result#1 : int = addInteger 40 2 in
result#1
--- baseline
--- uplc
(program 1.1.0
  [(lam result_1 result_1)
    [[(builtin addInteger) (con integer 40)] (con integer 2)]])
--- result
(con integer 42)
--- logs
[]
--- core after
addInteger 40 2
--- candidate
--- uplc
(program 1.1.0 [[(builtin addInteger) (con integer 40)] (con integer 2)])
--- result
(con integer 42)
--- logs
[]
